<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/DlgRegAdmin_CVrootview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:strokeWidth="5dp"
    app:strokeColor="?attr/colorPrimary"
    style="@style/CustomCardDefault">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/DlgRegAdmin_SV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/DlgRegAdmin_CLrootview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/DlgRegAdmin_TVttl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/tambah_admin"
                android:textColor="?attr/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center"
                app:layout_constraintWidth_percent="0.9"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/DlgRegAdmin_TILusername"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:boxBackgroundMode="filled"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:boxBackgroundColor="@color/white66"
                app:boxCornerRadiusTopStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                android:hint="@string/username"
                app:hintTextAppearance="@style/til_hinttext"
                android:textColorHint="?attr/colorPrimary"
                app:startIconDrawable="@drawable/ic_member"
                app:startIconTint="@null"
                app:layout_constraintWidth_percent="0.9"
                app:layout_constraintTop_toBottomOf="@id/DlgRegAdmin_TVttl"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/DlgRegAdmin_EDusername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="0897655770"
                    android:textColor="?attr/colorSecondary"
                    android:textSize="16sp"
                    android:maxLines="1"
                    android:inputType="textNoSuggestions"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/DlgRegAdmin_TILnama"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:boxBackgroundMode="filled"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:boxBackgroundColor="@color/white66"
                app:boxCornerRadiusTopStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                android:hint="@string/nama"
                app:hintTextAppearance="@style/til_hinttext"
                android:textColorHint="?attr/colorPrimary"
                app:startIconDrawable="@drawable/ic_member"
                app:startIconTint="@null"
                app:layout_constraintWidth_percent="0.9"
                app:layout_constraintTop_toBottomOf="@id/DlgRegAdmin_TILusername"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/DlgRegAdmin_EDnama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="0897655770"
                    android:textColor="?attr/colorSecondary"
                    android:textSize="16sp"
                    android:maxLines="1"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/DlgRegAdmin_TILtelp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:boxBackgroundMode="filled"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:boxBackgroundColor="@color/white66"
                app:boxCornerRadiusTopStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                android:hint="@string/no_handphone"
                app:hintTextAppearance="@style/til_hinttext"
                android:textColorHint="?attr/colorPrimary"
                app:startIconDrawable="@drawable/ic_phone"
                app:startIconTint="@null"
                app:layout_constraintWidth_percent="0.9"
                app:layout_constraintTop_toBottomOf="@id/DlgRegAdmin_TILnama"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/DlgRegAdmin_EDtelp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="0897655770"
                    android:textColor="?attr/colorSecondary"
                    android:textSize="16sp"
                    android:maxLines="1"
                    android:inputType="phone"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/DlgRegAdmin_TILalamat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:boxBackgroundMode="filled"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:boxBackgroundColor="@color/white66"
                app:boxCornerRadiusTopStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                android:hint="@string/alamat"
                app:hintTextAppearance="@style/til_hinttext"
                android:textColorHint="?attr/colorPrimary"
                app:startIconDrawable="@drawable/ic_home"
                app:startIconTint="@null"
                app:layout_constraintWidth_percent="0.9"
                app:layout_constraintTop_toBottomOf="@id/DlgRegAdmin_TILtelp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/DlgRegAdmin_EDalamat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="0897655770"
                    android:textColor="?attr/colorSecondary"
                    android:textSize="16sp"
                    android:maxLines="1"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/DlgRegAdmin_TILpwd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:boxBackgroundMode="filled"
                app:boxStrokeWidthFocused="0dp"
                app:boxStrokeWidth="0dp"
                app:boxBackgroundColor="@color/white66"
                app:boxCornerRadiusTopStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                android:hint="@string/password_baru"
                android:textColorHint="?attr/colorPrimary"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="?attr/colorSecondary"
                app:hintTextAppearance="@style/til_hinttext"
                app:layout_constraintWidth_percent="0.9"
                app:layout_constraintTop_toBottomOf="@id/DlgRegAdmin_TILalamat"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/DlgRegAdmin_EDpwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/colorSecondary"
                    android:textSize="16sp"
                    android:maxLines="1"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/DlgRegAdmin_TILpwdconf"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:boxBackgroundMode="filled"
                app:boxStrokeWidthFocused="0dp"
                app:boxStrokeWidth="0dp"
                app:boxBackgroundColor="@color/white66"
                app:boxCornerRadiusTopStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                android:hint="@string/masukan_lagi_password_baru"
                android:textColorHint="?attr/colorPrimary"
                app:helperText="Masukan lagi password anda untuk konfirmasi"
                app:helperTextTextColor="?android:attr/textColorPrimary"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="?attr/colorSecondary"
                app:layout_constraintWidth_percent="0.9"
                app:layout_constraintTop_toBottomOf="@id/DlgRegAdmin_TILpwd"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/DlgRegAdmin_EDpwdconf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/colorSecondary"
                    android:textSize="16sp"
                    android:maxLines="1"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:id="@+id/DlgRegAdmin_RGjabatan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:weightSum="2"
                android:orientation="horizontal"
                app:layout_constraintWidth_percent="0.9"
                app:layout_constraintTop_toBottomOf="@id/DlgRegAdmin_TILpwdconf"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/DlgRegAdmin_RBTmaster"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/master"
                    android:textSize="15sp"
                    android:textColor="?attr/colorSecondary"
                    android:textAllCaps="true"/>

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/DlgRegAdmin_RBTadmin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/admin"
                    android:textSize="15sp"
                    android:textColor="?attr/colorSecondary"
                    android:textAllCaps="true"
                    android:checked="true"/>
            </RadioGroup>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/DlgRegAdmin_BTyes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="24dp"
                android:text="@string/submit"
                android:textStyle="bold"
                android:typeface="serif"
                android:textSize="16sp"
                android:textColor="@color/white"
                style="@style/CustomMBDefault"
                app:layout_constraintWidth_percent="0.4"
                app:layout_constraintTop_toBottomOf="@id/DlgRegAdmin_RGjabatan"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/DlgRegAdmin_BTno"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/DlgRegAdmin_BTno"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="24dp"
                android:text="@string/batal"
                android:textStyle="bold"
                android:typeface="serif"
                android:textSize="16sp"
                style="@style/CustomMBStrokeDefault"
                app:layout_constraintWidth_percent="0.4"
                app:layout_constraintTop_toBottomOf="@id/DlgRegAdmin_RGjabatan"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/DlgRegAdmin_BTyes"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</com.google.android.material.card.MaterialCardView>

